# asi-chain

./: .gitignore  .gitmodules  Become-ASI-Chain-Validator.md  CONFIGURATION.md  DEVELOPMENT.md  LICENSE  README.md
ansible/: .gitignore  build-node.yml  down-dev.yml  down-devnet.yml  up-dev.yml  up-devnet.yml  workflow.md
asi_wallet_v2/: .env.example  CHANGELOG.md  FINAL_TEST_REPORT.md  README.md  clear-all-wc.js  config-overrides.js  debug-server.js  debug-walletconnect.js  fix-walletconnect-now.js  package.json  reset-walletconnect.sh  test-f1r3wallet-method.js  test-localstorage-crash.html  test-network-persistence.js  test-rev-vault.js  tsconfig.json  tsconfig.prod.json
block-explorer/: Dockerfile  README.md  check_status.sh  clear_explorer_data.sh  configure_docker_access.sh  docker-compose.explorer.yml  docker-entrypoint.sh  monitor_services.py  requirements.txt  start_dockerized_explorer.sh  start_explorer.sh
chain/: .env.example  Become-ASI-Chain-Validator.md  How-We-Launch.md  README.md  testnet-wallets.txt  (+1 more)
faucet/server/: .env.example  .env.rust  .gitignore  Cargo.toml  README.md
faucet/server/src/: config.rs  main.rs  utils.rs
faucet/server/src/api/: mod.rs  models.rs  router.rs
faucet/server/src/api/handlers/: balance.rs  deploy.rs  mod.rs  transfer.rs
faucet/server/src/api/middleware/: request_id.rs
faucet/server/src/core/: app.rs  mod.rs
faucet/server/src/services/: mod.rs  node_cli.rs
k3s/management-api/: Dockerfile  contracts.py  deploy.yaml  domain.py  k8s_ops.py  main.py  models.py  node_client.py  pyproject.toml  requirements.txt  settings.py
k3s/management-api/proto/: CasperMessage.proto  DeployServiceV1.proto  ProposeServiceV1.proto  ServiceError.proto
(+470 files in other folders)
