[package]
name = "asi-faucet"
version = "0.1.0"
edition = "2021"
description = "A service for transferring REV tokens on the ASI blockchain"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework and HTTP utilities
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "compression-gzip", "compression-br", "timeout", "cors", "limit"] }
http = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Utilities
regex = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Forked F1r3fly node cli 
node_cli = { package = "node_cli",  path = "./rust-client" }

[dev-dependencies]
proptest = "1.6"